--- a/app/scss/global.scss
+++ b/app/scss/global.scss
@@ -1,58 +1,81 @@
 body {
-  background-color: #eee;
+  background-color: $dark;
   display: flex;
   font-family: 'Muli', sans-serif;
 }
 
+.wrapper {
+  max-width: 70rem;
+  padding: 0 1.33rem;
+  margin-left: auto;
+  margin-right: auto;
+}
+
 .contract, .existing-contracts {
+  min-height: 600px;
   margin: 20px;
-  width: 50%;
   padding: 40px;
-  border: 1px solid #ddd;
-  background-color: #fff;
+  background-color: $light-bg;
 }
 
 h1 {
   margin: 10px;
+  color: $blue;
+  text-transform: uppercase;
   padding: 10px;
-  border-bottom: 1px solid #eee;
+  border-bottom: 1px solid $mid;
 }
 
 label {
   display: flex;
   flex-direction: column;
   text-transform: uppercase;
-  color: #aaa;
-  margin: 20px;
+  color: $light;
+  margin: 2rem 20px;
 }
 
 input[type="text"] {
-  padding: 6px;
+  margin-top: 1rem;
+  padding: 10px;
   font-size: 18px;
+  border: none;
+  border-radius: 0.375rem;
+  background-color: $mid;
+
+  &:focus {
+    outline: none;
+    box-shadow: 0 0 0 4px $purp;
+  }
 }
 
 .button {
-  background-color: #f58427;
-  color: white;
+  background-color: $blue;
+  color: $light;
   text-align: center;
   font-weight: bold;
   text-transform: uppercase;
-  margin: 20px;
-  padding: 9px 25px;
-  font-size: 14px;
-  letter-spacing: 1px;
+  margin: 30px 20px;
+  padding: 20px 25px;
+  font-size: 20px;
+  letter-spacing: 3px;
   cursor: pointer;
+
+  &:hover {
+    background-color: $purp;
+  }
 }
 
 .existing-contract ul {
   padding: 10px;
   margin: 20px;
   background-color: #eee;
+  overflow: scroll;
 }
 
 .existing-contract ul > li {
   list-style: none;
   display: flex;
+  flex-direction: column;
   margin: 10px;
 }
 
